<resources>
    <!-- Warna -->

    <!-- Strings untuk TextView dan Buttons -->
    <string name="tv_calc">15,000 - 7500</string>
    <string name="tv_result">7,500</string>
    <string name="btn_ac">AC</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">/</string>
    <string name="btn_multiply">x</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_equals">=</string>
    <string name="btn_zero">0</string>
    <string name="btn_coma">.</string>
</resources>
