<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

<!--    layout_constraintGuide_percent digunakan untuk menentukan
persentase tempat guideline ini berada pada layar.-->

<!--    Tombol-tombol seperti angka (btn_one, btn_two, btn_three, dll.) serta operator
(btn_plus, btn_minus, btn_equals, dll.) ditempatkan pada grid yang diatur oleh Guideline.-->

<!--     menggunakan Guideline untuk mengatur grid tata letak 4 kolom dan 5 baris.-->
    <!-- Guideline Vertikal (Pembatas 4 Kolom) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <!-- Guideline Horizontal (Pembatas 5 Baris) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tv_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_calc"
        android:textSize="30sp"
        android:gravity="end"
        android:textStyle="bold"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="25dp"
        android:layout_marginBottom="50dp" />

    <!-- TextView untuk Tampilan Hasil -->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:textSize="36sp"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="25dp" />

<!--    garis bawah-->
     <Button
        android:layout_width="130dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Tombol AC -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ac"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn_ac"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h2"
        android:backgroundTint="@color/orange"
        android:textColor="@android:color/white"
        />

<!--    tombol persen-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_percent"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_percent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toEndOf="@id/btn_ac"
        app:layout_constraintTop_toTopOf="@id/guideline_h1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h2"
/>

<!--    tombol bagi-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_divide"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_divide"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintTop_toTopOf="@id/guideline_h1"
        />

    <!--    tombol kali-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_multiply"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_multiply"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h2"
        app:layout_constraintStart_toEndOf="@id/btn_divide"
        app:layout_constraintTop_toTopOf="@id/guideline_h1"
        />

    <!-- Tombol 7 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_seven"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn_seven"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h3"
        android:backgroundTint="@color/white" />

    <!--    tombol 8-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_eight"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_eight"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toEndOf="@id/btn_seven"
        app:layout_constraintTop_toTopOf="@id/guideline_h2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h3"
        />

    <!--    tombol 9-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nine"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_nine"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toEndOf="@id/btn_eight"
        app:layout_constraintTop_toTopOf="@id/guideline_h2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h3"
        />

    <!--    tombol +-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_plus"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_plus"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h3"
        app:layout_constraintStart_toEndOf="@id/btn_nine"
        app:layout_constraintTop_toTopOf="@id/guideline_h2"
        />

    <!-- Tombol 4 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_four"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn_four"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        android:backgroundTint="@color/white" />

    <!--    tombol 5-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_five"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_five"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toEndOf="@id/btn_four"
        app:layout_constraintTop_toTopOf="@id/guideline_h3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        />

    <!--    tombol 6-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_six"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_six"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        app:layout_constraintTop_toTopOf="@id/guideline_h3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        />

    <!--    tombol minus-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_minus"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_minus"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        app:layout_constraintStart_toEndOf="@id/btn_six"
        app:layout_constraintTop_toTopOf="@id/guideline_h3"
        />

    <!-- Tombol 1 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_one"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/btn_one"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h5"
        android:backgroundTint="@color/white" />

    <!--    tombol 2-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_two"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_two"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toEndOf="@id/btn_one"
        app:layout_constraintTop_toTopOf="@id/guideline_h4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h5"
        />

    <!--    tombol 3-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_three"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_three"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        app:layout_constraintTop_toTopOf="@id/guideline_h4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h5"
        />

<!--    tombol equals-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_equals"
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/orange"
        android:textColor="@android:color/white"
        android:text="@string/btn_equals"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_three"
        app:layout_constraintTop_toTopOf="@id/guideline_h4"
        />

    <!-- Tombol 0 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_zero"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/btn_zero"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:textColor="@color/grey"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="@id/guideline_h5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white" />


    <!--    tombol koma-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_coma"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:text="@string/btn_coma"
        android:textStyle="bold"
        android:textSize="22sp"
        android:translationZ="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
        app:layout_constraintTop_toTopOf="@id/guideline_h5"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
